--- a/public/auth/login.ejs
+++ b/public/auth/login.ejs
@@ -28,7 +28,37 @@
         class="w-full max-w-lg bg-white shadow-md rounded px-8 py-8 mb-4"
         id="login-form"
       >
-        <div class="md:flex md:items-center mb-6">
+      <h3 class="mb-4 text-purple-700 font-bold text-xl text-center">Login Form</h3>
+      <label class="block mb-4">
+        <span class="block text-lg font-semibold">Email</span>
+        <input 
+          type="email"
+          id="email"
+          class="mt-3 px-3 py-2 bg-white border shadow-sm border-purple-700 placeholder-slate-400 focus:outline-none  block w-full rounded-md sm:text-sm " 
+          placeholder="Enter Your Email" 
+        >
+        <span
+          class="text-red-500 text-xs error-message"
+          id="error-email"
+        >
+      </label>
+      <label class="block mb-5">
+        <span class="block text-lg font-semibold">Password</span>
+        <input 
+          type="password"
+          id="password"
+          class="mt-3 px-3 py-2 bg-white border shadow-sm border-purple-700 placeholder-slate-400 focus:outline-none  block w-full rounded-md sm:text-sm " 
+          placeholder="********" 
+        >
+        <span
+          class="text-red-500 text-xs error-message"
+          id="error-password"
+        >
+      </label>
+      <div class="text-center">
+          <button type="submit" class="w-32 bg-purple-500 hover:bg-purple-400 py-2 px-4 rounded-full text-white font-bold">Submit</button>
+      </div>
+        <!--<div class="md:flex md:items-center mb-6">
           <div class="md:w-1/3">
             <label
               class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
@@ -85,7 +115,7 @@
               Submit
             </button>
           </div>
-        </div>
+        </div>-->
       </form>
     </div>
   </div>
