--- a/public/partials/nav.ejs
+++ b/public/partials/nav.ejs
@@ -66,17 +66,9 @@
         <div class="hidden sm:ml-6 sm:block">
           <div class="flex space-x-4">
             <a
-              href="#"
+              href="/v1/users"
               class="text-gray-500 font-bol hover:bg-purple-400 hover:text-white rounded-md px-3 py-2 text-sm"
-            >Team</a>
-            <a
-              href="#"
-              class="text-gray-500 font-bol hover:bg-purple-400 hover:text-white rounded-md px-3 py-2 text-sm"
-            >Projects</a>
-            <a
-              href="#"
-              class="text-gray-500 font-bol hover:bg-purple-400 hover:text-white rounded-md px-3 py-2 text-sm"
-            >Calendar</a>
+            >User Lists</a>
           </div>
         </div>
       </div>
@@ -140,6 +132,7 @@
               id="user-menu-item-1"
             >Settings</a>
             <a
+              @click="logout"
               href="#"
               class="block px-4 py-2 text-sm text-gray-700"
               role="menuitem"
@@ -188,7 +181,7 @@
 
       toggle() {
         this.open = !this.open
-      }
+      },
     }))
   })
 </script>
