--- a/public/user/index.ejs
+++ b/public/user/index.ejs
@@ -6,10 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/assets/css/index.css">
+    <script src="/assets/js/app.js"></script>
 </head>
 <body class="bg-slate-200">
+    <%- include('../partials/nav') %>
     <div class="container">
-        <div class="flex justify-end pt-8">
+        <div class="flex justify-between pt-8">
+            <div>
+              <!-- Previous Button -->
+              <a href="<%= links.previous || '#'  %>" class="<%= links.previous || 'pointer-events-none' %> inline-flex items-center px-4 py-2 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+                Previous
+              </a>
+              <!-- Next Button -->
+              <a href="<%= links.next || '#'  %>" class="<%= links.next || 'pointer-events-none' %> inline-flex items-center px-4 py-2 ml-3 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+                Next
+              </a>
+            </div>
             <a href="/v1/users/create" class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded flex">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
@@ -47,7 +59,7 @@
                     </tr>
                <% }); %>
             </tbody>
-          </table>
+        </table>
     </div>
 </body>
 </html>
