--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -61,13 +61,13 @@
               <a href="<%= links.next || '#'  %>" class="<%= links.next || 'pointer-events-none' %> inline-flex items-center px-4 py-2 ml-3 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
                 Next
               </a>
-              <select id="sort" class="ml-3 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg  block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white focus:outline-none dark:focus:ring-blue-500 dark:focus:border-blue-500">
+              <select id="sort" class="ml-3 bg-white border border-gray-300 text-gray-900 text-sm rounded-lg  block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white focus:outline-none dark:focus:ring-blue-500 dark:focus:border-blue-500">
                 <option value="">Sorting</option>
                 <option <%= request.query.sort == '1' ?  'selected' : '' %> value="1">Ascending</option>
                 <option <%= request.query.sort == '-1' ?   'selected' : '' %>  value="-1">Decending</option>
               </select>
               <form action="">
-                <input name="search" value="<%= request.query.search || '' %>" type="search" class="text-sm font-medium ml-3 w-[400px] h-full p-3 focus:outline-none bg-gray-50 border border-gray-300 text-gray-500 rounded-lg" placeholder="Search..">
+                <input name="search" value="<%= request.query.search || '' %>" type="search" class="text-sm font-medium ml-3 w-[400px] h-full p-3 focus:outline-none bg-white border border-gray-300 text-gray-500 rounded-lg" placeholder="Search..">
               </form>
             </div>
             <a href="/v1/users/create" class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded flex">
