--- a/views/errors/404.ejs
+++ b/views/errors/404.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>400</title>
-    <link rel="stylesheet" href="<%= mix('/public/assets/css/index.css') %>">
+    <link rel="stylesheet" href="<%= mix('/public/assets/css/app.css') %>">
     <style>
         .emoji-404 {
 
